--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="" class="webstudio"> <span class="web">Web</span> Studio</a>
       <ul>
        <li class="nav"> <a href="" class="nav">Студия</a> </li>
-       <li class="nav"> <a href="" class="nav"> Портфолио</a> </li>
+       <li class="nav"> <a href="./portfolio.html" class="nav"> Портфолио</a> </li>
        <li class="nav"> <a href="" class="nav"> Контакты </a> </li>
       </ul>
       
@@ -48,7 +48,7 @@
 
 
      <h2>Особености</h2>
-
+     <section>
      <ul>
       <li> <h3 class="title">Внимание к деталям</h3> <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p> </li>
       <li> <h3 class="title">Пунктуальность</h3>     <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p> </li>
