--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
   
 <section>
 
-    <h1>Проэкты</h1>
+    <h1 class="title-hiden">Проэкты</h1>
     <!-- Кнопки -->
 <ul class="list">
  <li> <button type="button" class="button-portfolio">Все </button></li>
@@ -49,16 +49,16 @@
 </ul>
 
 
-<ul class="list">
-    <li> <img src="./images/portfolio/img(1).jpg" alt=" Ноутбук" width="370" height="294"> <h2 class="title-procets">Технокряк</h2>                        <p class="procets-text">Веб-сайт</p>     </li>
-    <li> <img src="./images/portfolio/img(2).jpg" alt="Игра в бастектбол" width="370" height="294"> <h2 class="title-procets">Постер New Orlean vs Golden Star</h2> <p class="procets-text">Дизайн</p>     </li>
-    <li> <img src="./images/portfolio/img(3).jpg" alt="Рыба" width="370" height="294"> <h2 class="title-procets">Ресторан Seafood</h2>                 <p class="procets-text">Приложение</p>     </li>
-    <li> <img src="./images/portfolio/img(4).jpg" alt="Наушники" width="370" height="294"> <h2 class="title-procets">Проект Prime</h2>                     <p class="procets-text">Маркетинг</p>     </li>
-    <li> <img src="./images/portfolio/img(5).jpg" alt="коробки" width="370" height="294"> <h2 class="title-procets">Проект Boxes</h2>                     <p class="procets-text">Приложение</p>     </li>
-    <li> <img src="./images/portfolio/img(6).jpg" alt="Моноблок" width="370" height="294"> <h2 class="title-procets"> Inspiration has no Borders</h2>      <p class="procets-text">Веб-сайт</p>     </li>
-    <li> <img src="./images/portfolio/img(7).jpg" alt="Книга" width="370" height="294"> <h2 class="title-procets">Издание Limited Edition</h2>         <p class="procets-text">Дизайн  </p>    </li>
-    <li> <img src="./images/portfolio/img(8).jpg" alt="Бирка" width="370" height="294"> <h2 class="title-procets">Проект LAB</h2>                      <p class="procets-text">Маркетинг  </p>    </li>
-    <li> <img src="./images/portfolio/img(9).jpg" alt="Работа за ноутбуком" width="370" height="294"> <h2 class="title-procets">Growing Business</h2>                 <p class="procets-text"> Приложение</p>     </li>
+    <ul class="list">
+    <li> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img1.jpg" alt=" Ноутбук" width="370" height="294"> <h2 class="title-procets">Технокряк</h2>                        <p class="procets-text">Веб-сайт</p>        </a>              </li>                                                          
+    <li> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img2.jpg" alt="Игра в бастектбол" width="370" height="294"> <h2 class="title-procets">Постер New Orlean vs Golden Star</h2> <p class="procets-text">Дизайн</p>  </a>             </li>                                       
+    <li> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img3.jpg" alt="Рыба" width="370" height="294"> <h2 class="title-procets">Ресторан Seafood</h2>                 <p class="procets-text">Приложение</p>     </a>                   </li>                       
+    <li> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img4.jpg" alt="Наушники" width="370" height="294"> <h2 class="title-procets">Проект Prime</h2>                     <p class="procets-text">Маркетинг</p>  </a>                   </li>                       
+    <li> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img5.jpg" alt="коробки" width="370" height="294"> <h2 class="title-procets">Проект Boxes</h2>                     <p class="procets-text">Приложение</p>   </a>                  </li>                       
+    <li> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img6.jpg" alt="Моноблок" width="370" height="294"> <h2 class="title-procets"> Inspiration has no Borders</h2>      <p class="procets-text">Веб-сайт</p>  </a>                    </li>                       
+    <li> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img7.jpg" alt="Книга" width="370" height="294"> <h2 class="title-procets">Издание Limited Edition</h2>         <p class="procets-text">Дизайн  </p>    </a>                      </li>                       
+    <li> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img8.jpg" alt="Бирка" width="370" height="294"> <h2 class="title-procets">Проект LAB</h2>                      <p class="procets-text">Маркетинг  </p> </a>                      </li>                       
+    <li> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img9.jpg" alt="Работа за ноутбуком" width="370" height="294"> <h2 class="title-procets">Growing Business</h2>                 <p class="procets-text"> Приложение</p> </a>       </li>                       
 </ul>
 
 </section>
