--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
      
      <section>
-        <h2 class="title-hiden">Особености</h2>
+        <h2 class="visually-hidden">Особености</h2>
      <ul class="list">
       <li> <h3 class="title">Внимание к деталям</h3> <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p> </li>
       <li> <h3 class="title">Пунктуальность</h3>     <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p> </li>
@@ -89,7 +89,7 @@
 
         <ul class="list">
             <li class="adress item"> <a href="https://goo.gl/maps/J5LYQcXN28MMdi7CA" target="_blank" rel="noopener noreferrer nofollow" class="adress-link link" >г. Киев, пр-т Леси Украинки, 26</a>   </li>
-            <li  class="contacts-item"-footer> <a href="mailto:info@devstudio.com"  class="contacts-foter link"> info@devstudio.com</a> </li>
+            <li  class="contacts-item-foote"> <a href="mailto:info@devstudio.com"  class="contacts-foter link"> info@devstudio.com</a> </li>
             <li  class="contacts-item-footer"> <a href="tel:+380961111111"  class="contacts-foter link"> +380961111111</a> </li>
         
         </ul>
