--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
   
 <section>
 
-    <h1 class="title-hiden">Проэкты</h1>
+    <h1 class="visually-hidden">Проэкты</h1>
     <!-- Кнопки -->
 <ul class="list">
  <li> <button type="button" class="button-portfolio">Все </button></li>
@@ -94,7 +94,7 @@
 
         </ul>
     </address>
-
+</footer>
     
 </body>
 </html>
